fixed spacing issue

--- a/css/mobile_style.css
+++ b/css/mobile_style.css
@@ -195,7 +195,6 @@ h3 {
   display: flex;
   flex-direction: column;
   gap: 8px;
-  margin-bottom: 16px;
   padding: 16px;
   border: 2px solid var(--border-color);
   border-radius: 16px;
